@startuml burito search app
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

rectangle お店 #LightBlue {
  entity "shops" as shops {
    + shop_id : serial <<PK>>
    --
    * shop_name : varchar(100)
  }
}

rectangle 住所 #lightgreen {
  entity "address" as address {
    + shop_id: integer <<FK>>
    --
    * prefecture : varchar(100)
    * city : varchar(100)
    * street : varchar(100)
            '(Point, 4326)は緯度経度を２次元のデータで格納するという意味
    * location : GEOMETRY(Point, 4326)
  }
}

rectangle お店のメニュー #LightCoral{
  entity "shops_menu" as shops_menu {
    + shop_id : integer <<FK>>
    + menu_id : integer <<FK>>
    --
    * show_flg : boolean
  }
}

rectangle メニュー #LightCoral{
  entity "mst_menu" as mst_menu {
    + menu_id : serial <<PK>>
    --
    + menu_name : varchar(100) <<UNIQUE>> <<NOT NULL>>
  }
}



shops ||--|| address
shops ||--|{ shops_menu
shops_menu }|--|| mst_menu

@enduml